--- a/MinimalApiClient.csproj
+++ b/MinimalApiClient.csproj
@@ -7,10 +7,24 @@
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>MinimalApiClient</Title>
+    <Company>Gabriel Dickert</Company>
+    <PackageProjectUrl>https://github.com/gabrieldickert/minimalapiclient</PackageProjectUrl>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/gabrieldickert/minimalapiclient</RepositoryUrl>
+    <Copyright>2024</Copyright>
+    <Description>A Simple API Client to make asynchronous  API-Calls with CRUD-Operation and Basic and Bearer Authentification.</Description>
+    <PackageTags>api;webclient;rest;http;</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="readme.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
